AuthController Swagger done
